1. 七牛图片地址下载修改  2.教室talk列表，头像显示 3，发动态隐藏自己发动态的文案“自己”

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -100,6 +100,7 @@
             android:layout_height="wrap_content">
 
         <cn.xiaojs.xma.ui.widget.RoundedImageView
+                android:id="@+id/portrait"
                 android:layout_marginLeft="@dimen/px5"
                 android:layout_width="@dimen/px70"
                 android:layout_height="@dimen/px70"
