--- a/app/src/main/res/layout/layout_person_home_header.xml
+++ b/app/src/main/res/layout/layout_person_home_header.xml
@@ -12,7 +12,7 @@
 
         <ImageView
                 android:id="@+id/person_home_header_blur"
-                android:scaleType="fitXY"
+                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
