--- a/app/src/main/res/layout/layout_moment_header.xml
+++ b/app/src/main/res/layout/layout_moment_header.xml
@@ -31,6 +31,7 @@
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginRight="@dimen/px30"
             android:layout_centerInParent="true"
+            android:gravity="center_vertical"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">
 
@@ -43,7 +44,6 @@
                     android:id="@+id/moment_header_name"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_27px"
-                    android:text="谢一名"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -69,7 +69,6 @@
                     android:layout_gravity="center_vertical"
                     android:textColor="@color/common_text"
                     android:textSize="@dimen/font_23px"
-                    android:text="同学"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -77,7 +76,6 @@
                     android:id="@+id/moment_header_desc"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/px30"
-                    android:text="2022考研政治高分补习培优班2022考研政治高分补习培优班"
                     android:textColor="@color/font_black"
                     android:textSize="@dimen/font_24px"
                     android:layout_width="match_parent"
