--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -13,6 +13,7 @@
             android:paddingRight="@dimen/px26"
             android:paddingTop="@dimen/px16"
             android:paddingBottom="@dimen/px16"
+            android:textStyle="bold"
             android:textColor="@color/font_black"/>
 
     <ImageView
@@ -45,6 +46,7 @@
             android:paddingLeft="@dimen/px32"
             android:paddingRight="@dimen/px32"
             android:paddingTop="@dimen/px16"
+            android:textStyle="bold"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:paddingBottom="@dimen/px16"
