--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -11,11 +11,12 @@
     <EditText
             android:id="@+id/search_view"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/px80"
+            android:layout_height="@dimen/px58"
             android:hint="@string/search"
+            android:textSize="@dimen/font_27px"
             android:background="@drawable/common_edittext_bg"
             android:drawableLeft="@drawable/ic_search"
-            android:layout_margin="10dp"
+            android:layout_margin="@dimen/px15"
             android:padding="5dp"/>
 
     <cn.xiaojs.xma.common.pulltorefresh.core.PullToRefreshExpandableListView
