--- a/app/src/main/res/layout/teaching_subject_list_item.xml
+++ b/app/src/main/res/layout/teaching_subject_list_item.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/px26"
-                android:paddingRight="@dimen/px26">
+                android:layout_height="wrap_content">
 
     <TextView
             android:id="@+id/subject_name"
@@ -12,6 +10,8 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/px28"
             android:paddingBottom="@dimen/px28"
+            android:paddingLeft="@dimen/px28"
+            android:paddingRight="@dimen/px28"
             android:textColor="@color/font_black"
             android:textSize="@dimen/font_28px"
             android:layout_toLeftOf="@+id/selected_status"/>
@@ -22,8 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="@dimen/px10"
-            android:layout_marginRight="@dimen/px5"
+            android:layout_marginRight="@dimen/px28"
             android:src="@drawable/ic_teaching_subject_check"
             android:visibility="gone"/>
 
