--- a/app/src/main/res/layout/layout_message_list_item.xml
+++ b/app/src/main/res/layout/layout_message_list_item.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:background="@color/main_bg"
             android:visibility="gone"
-            android:layout_height="@dimen/px30"/>
+            android:layout_height="@dimen/px29"/>
 
     <View
             android:id="@+id/message_top_divider"
@@ -19,70 +19,64 @@
             style="@style/DividerHorizontal"/>
 
     <RelativeLayout
-            android:background="@drawable/white_grey_selector"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/white_grey_selector"
+            android:paddingRight="@dimen/px27">
 
         <cn.xiaojs.xma.ui.widget.MessageImageView
                 android:id="@+id/message_image"
                 android:layout_width="@dimen/px138"
                 android:layout_height="@dimen/px126"
-                android:scaleType="centerCrop"
                 android:paddingRight="@dimen/px24"
                 android:paddingLeft="@dimen/px24"
                 android:paddingBottom="@dimen/px18"
                 android:paddingTop="@dimen/px18"
+                android:scaleType="centerCrop"
                 app:isCircle="true"
                 android:layout_alignParentLeft="true"
                 android:layout_centerInParent="true"
                 app:corner_radius="@dimen/px45"/>
 
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
+        <TextView
+                android:id="@+id/message_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/message_image"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginTop="@dimen/px20"
+                android:textColor="@color/font_black"
+                android:textSize="@dimen/font_29px"
+                />
+
+        <TextView
+                android:id="@+id/message_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_alignBaseline="@id/message_title"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/px24"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content">
+                android:layout_marginRight="@dimen/px28"
+                android:textSize="@dimen/font_21px"
+                android:textColor="@color/common_text"
+                android:text="15:00"/>
 
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                <TextView
-                        android:id="@+id/message_title"
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:layout_gravity="center_vertical"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/font_black"
-                        android:textSize="@dimen/font_32px"/>
-
-                <TextView
-                        android:id="@+id/message_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="@dimen/px30"
-                        android:textSize="@dimen/font_26px"
-                        android:textColor="@color/common_text"/>
-            </LinearLayout>
-
-            <TextView
-                    android:id="@+id/message_content"
-                    android:textSize="@dimen/font_26px"
-                    android:textColor="@color/common_text"
-                    android:layout_marginTop="@dimen/px18"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
+        <TextView
+                android:id="@+id/message_content"
+                android:textSize="@dimen/font_25px"
+                android:textColor="@color/common_text"
+                android:layout_below="@id/message_title"
+                android:layout_alignLeft="@id/message_title"
+                android:layout_marginTop="@dimen/px10"
+                android:layout_marginBottom="@dimen/px20"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
     </RelativeLayout>
+
 
     <View
             android:id="@+id/message_bottom_divider"
